--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: echo "hello world"
-      - run: sudo npm install -g npm@latest - run: npm install
+      - run: sudo npm install -g npm@latest
+      - run: npm install
       - run: npm run build
       - run: npm run test
